    * Added ability to remove the "WU Info" panel from view.
    * Updated queue structure to qd FR 069
    * Add ability to select custom web output templates.
    * Altered About Dialog text.
    * Added custom variables to web output templates.
    * Fixed GPUv2 always reporting PPD as "inaccurate."

    Linux

    * Fixed an issue with latest GCC and inline functions (thanks to KB3LWJ).

v2.3.2b (11/04/08)

    General

    * Fixed bug that caused xyz files to be saved with no project number.
    * A badly formatted psummary no longer produces error message, rather logs a
      warning silently to the log.
    * Added Italian translation.
    * Fixed bug with fractional deadlines still being truncated.
    * Checking for updates from the menu now informs you if no update was found.
    * Added GPUv2 core support.
    * Fixed ETA calculation for WUs with less than 100 % markers.
    * Non-standard system tray menu items moved to icon tooltip.

    Windows

    * Maximised restoring from system tray now works. Finally.
    * Updated MSVC project to version 9.
    * Fixed display of ç character in François.

    OS X

    * Fixed log window not scrolling.
    * Fixed line encoding bug when monitoring MSW clients.
    * Altered progress bar to decrease CPU usage.

v2.3.2a (16/02/08)

    General

    * Added German translation.
    * Fixed endian swap bug when monitoring PPC Macs.
    * FahMon now works on Macs running OS X.
    * Fixed some minor translation bugs.

    Windows

    * Fixed window state bug that caused FahMon to to restore correctly from the
      system tray icon or the taskbar.
    * Fixed regression in the benchmarks dialog that would always display old
      benchmarks by location rather than name.

v2.3.2 (08/02/08)

    General

    * Updated licence information.
    * Included code from qd to retrieve PRCG, issue date, username and
      teamnumber.
    * Removed redundant (unstable) code.