@@ -18,6 +18,7 @@ Christian Bargmann
 Bruce Borden
 Mark Gerber
 Derek Kaser
+John Daiker
 
 
 Translation team:
