@@ -19,6 +19,7 @@ SVN
     Linux
 
     * Fixed an issue with latest GCC and inline functions (thanks to KB3LWJ).
+    * Fixed compiler warnings about deprecated conversions (thanks to John Daiker).
 
 v2.3.2b (11/04/08)
 
